webshoppractice.client/src/assets/main.css
@import './base.css';

html, body, #app {
  max-width: 1280px;
  height: 100%;
  width: 100%;
  margin: 0 auto;
  font-weight: normal;
}

a,
.green {
  text-decoration: none;
  color: hsla(160, 100%, 37%, 1);
  transition: 0.4s;
  padding: 3px;
}

@media (hover: hover) {
  a:hover {
    background-color: hsla(160, 100%, 37%, 0.2);
  }
}

@media (min-width: 1024px) {
  body {
    display: flex;
    place-items: center;
  }

  #app {
    display: block;
    padding: 0 1rem;
  }
}

